--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+
+
+a.active {
+   text-decoration: underline;
+}
+
+body {
+   font-family: 'Arial', sans-serif;
+}
+
+img {
+   max-width: 100%;
+}
